# citeget

./: .buildinfo  .gitignore  CLAUDE.md  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
.claude/skills/acquire-references/: SKILL.md
.claude/skills/check-submission-fit/: SKILL.md
.claude/skills/format-for-journal/: SKILL.md
.claude/skills/prepare-submission/: SKILL.md
.claude/skills/research-topic/: SKILL.md
.claude/skills/review-article/: SKILL.md
_modules/: index.html
_modules/citeget/: acquire_references.html  cli.html  core.html  extract.html  resolve.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: citeget.rst.txt
_sources/module_docs/citeget/: __main__.rst.txt  acquire_references.rst.txt  article_pub.rst.txt  cli.rst.txt  core.rst.txt  extract.rst.txt  resolve.rst.txt
citeget/: __init__.py  __main__.py  acquire_references.py  cli.py  core.py  extract.py  resolve.py
citeget/article_pub/: __init__.py
citeget/article_pub/data/: journal_profiles.json
citeget/article_pub/scripts/: check_article.py  extract_references.py  word_count.py
citeget/data/: libgen_vg_report.md
module_docs/: citeget.html
module_docs/citeget/: __main__.html  acquire_references.html  article_pub.html  cli.html  core.html  extract.html  resolve.html
tests/: test_extract.py  test_resolve.py
